valueOf instead of constructor